--- a/src/assets/css/widgets.css
+++ b/src/assets/css/widgets.css
@@ -12,45 +12,71 @@
     height: 3rem;
     width: 9rem;
     border-radius: 2px;
-    border: none;
-    color: transparent;
+    border: 1px solid transparent;
     position: relative;
     overflow: hidden;
     cursor: pointer;
-    transition: all 0.3s ease-in-out;
+    z-index: 1;
+    transition: all 0.8s ease-in;
 }
 
-.butn::before {
-    background: #fff;
-    content: "";
-    height: 80px;
-    opacity: 0;
+.butn:before, .butn:after {
     position: absolute;
-    top: -20px;
-    transform: rotate(35deg);
-    width: 20px;
-    transition: all 2000ms cubic-bezier(0.19, 1, 0.22, 1);
+    top: 50%;
+    content: '';
+    width: 10px;
+    height: 10px;
+    background-color: transparent;
+    border-radius: 50%;
+    z-index: -1;
 }
 
-.butn_success {
+.butn:before {
+    left: -20px;
+    transform: translate(-50%, -50%);
+}
+
+.butn:after {
+    right: -20px;
+    transform: translate(50%, -50%);
+}
+
+.butn_sm {
+    font-size: 12px;
+    padding: 0.5rem;
+    height: 2rem;
+    width: 6rem;  
+}
+
+.butn_rounded {
+    border-radius: 30px;
+}
+
+.butn_rounded-sm {
+    border-radius: 10px;
+}
+
+.butn_main {
+    color: #8a0123 !important;
+    border-color: #8a0123 !important;
+}
+
+.butn_main:before, .butn:after {
+    background-image: linear-gradient(-90deg, #8a0123 0%, #cf2e2e 100%) !important;
+}
+
+.butn_main:hover {
     color: #fff !important;
-    background-color: #ed3b58 !important;
-    background-image: linear-gradient(180deg, #f78da7 0%, #cf2e2e 100%) !important;
 }
 
-.butn_success::before {
-  left: -50%;
+.butn:hover:before {
+    animation: criss-cross-left 0.8s both;
+    animation-direction: alternate;
 }
 
-.butn:hover {
-  transform: translateY(-3px);
-  color: #fff;
-  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.3);
-}
-
-.butn_success:hover::before {
-    left: 120%;
-    opacity: 0.5;
+.butn:hover:after {
+    animation: criss-cross-right 0.8s both;
+    animation-direction: alternate;
 }
 
 .butn span {
@@ -61,46 +87,80 @@
     width: 100% !important;
 }
 
+
+@keyframes criss-cross-left {
+    0% {
+        left: -20px;
+    }
+
+    50% {
+        left: 50%;
+        width: 10px;
+        height: 10px;
+    }
+
+    100% {
+        left: 50%;
+        height: 300px;
+        width: 300px;
+    }
+}
+
+@keyframes criss-cross-right {
+    0% {
+        right: -20px;
+    }
+
+    50% {
+        right: 50%;
+        width: 10px;
+        height: 10px;
+    }
+
+    100% {
+        right: 50%;
+        height: 300px;
+        width: 300px;
+    }
+}
+
 /** Button Hover CSS ends here **/
 
 /** Link Effect CSS **/
 
 .linkEffect a {
     position: relative;
-    overflow: hidden;
     display: block;
     text-align: center;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 14px; 
 }
 
-.linkEffect a span {
-    display: block;
-    transition: transform 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.linkEffect a:after {
+.linkEffect a:before {
+    content: '';
+    display: inline-block;
+    width: 12px;
+    height: 8px;
+    left: -10px;
+    border: 1px solid #ed3b58;
+    opacity: 0;
     position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    content: attr(data-hover);
-    display: inline;
-    text-align: center;
-    transition: top 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    text-transform: none;
+    top: 32px;
+    transform: rotate(-45deg);
+    transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+    visibility: hidden;
+}
+
+.linkEffect a:hover:before {
+    opacity: 1;
+    top: 0;
+    visibility: visible;
 }
 
 .linkEffect a:hover {
     color: #ed3b58 !important;
-}
-
-.linkEffect a:hover span {
-    color: #ed3b58 !important;
-    transform: translateY(-100%);
-}
-
-.linkEffect a:hover:after {
-    top: 0;
+    opacity: 0.8;
 }
 
 /** Link Effect CSS ends here **/
