--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ p {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.8);
 }
 
 .mainHeader .header_wrap {
@@ -90,6 +90,10 @@ p {
 
 .navigationWrapper ul li.menu_item a {
   color: #fff;
+}
+
+.navigationWrapper ul li.menu_item a.butn {
+  height: 2.5rem;
 }
 
 .navigationWrapper ul li.menu_item img {
@@ -156,11 +160,6 @@ p {
 .navigationWrapper .dropdown_menu ul li a {
   text-transform: uppercase;
   margin: 0 0 5px;
-}
-
-.navigationWrapper ul li.menu_item:not(.dropdown) .butn {
-  width: 7rem;
-  height: 2.5rem;
 }
 
 /** Header CSS Ends here **/
@@ -363,24 +362,18 @@ footer .copyright img {
   }
 
   .mainHeader .logo img {
-      max-width: 220px;
+      max-width: 140px;
   }
 }
 
 @media (max-width: 991.98px) {
-
-  .navigationWrapper ul li.menu_item:not(.dropdown) .butn {
-    width: 3rem;
-    height: 2rem;
-    font-size: 0;
-  }
 
   .innerHeaderWrap ul {
     gap: 15px;
   }
   
   .mainHeader .logo img {
-      max-width: 150px;
+      max-width: 130px;
   }
 
   .navigationWrapper ul li.menu_item span.dropdown_text {
@@ -428,12 +421,8 @@ footer .copyright img {
 
 @media (max-width: 767.98px) {
 
-  .mainHeader .header_inner {
-    background-color: rgba(0,0,0,0.8);
-  }
-
   .mainHeader .logo img {
-      max-width: 180px;
+      max-width: 120px;
   }
 
   .mainHeader .header_wrap {
@@ -526,10 +515,8 @@ footer .copyright img {
     margin: 0 auto;
     display: block;
     text-align: center;
-    line-height: 1.5rem;
     font-size: 13px;
     width: 100%;
-    height: 2.5rem;
   }
 
   .navigationWrapper ul li.menu_item:not(.dropdown) .butn img {
@@ -620,7 +607,7 @@ footer .copyright img {
   }
 
   .mainHeader .logo img {
-      max-width: 170px;
+      max-width: 110px;
   }
 
   .navigationWrapper {
