--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -39,6 +39,30 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
 /** Font Rule Ends here **/
 
 
@@ -241,7 +265,56 @@
 
 /** Responsive CSS starts here **/
 
+@media (max-width: 1199.98px) {
+  .sec_ttl h2 {
+    font-size: 28px;
+  }
+
+  .fancy_ttl:before, .fancy_ttl:after {
+    width: 90px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .sec_ttl h2 {
+    font-size: 25px;
+  }
+
+  .custom_row {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+
+  .custom_col-3, .custom_col-6 {
+    padding: 0 10px;
+  }
+}
+
+@media (max-width: 767.98px) {
+
+  .sec_ttl h2 {
+    font-size: 22px;
+  }
+
+  .fancy_ttl:before, .fancy_ttl:after {
+    width: 60px;
+  }
+}
+
 @media (max-width: 575.98px) {
+
+  .custom_col-3, .custom_col-6 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .sec_ttl h2 {
+    font-size: 20px;
+  }
+
+  .fancy_ttl:before, .fancy_ttl:after {
+    width: 40px;
+  }
 
   form:not(.rs-form) input:not([type="submit"]) {
       height: 40px;
