--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -195,7 +195,7 @@
       margin: 0 0 15px;
   }
 
-  form:not(.rs-form) label {
+  form label {
       display: block;
       font-size: 14px;
       font-weight: 600;
@@ -203,7 +203,7 @@
       margin-bottom: 10px;
   }
 
-  form:not(.rs-form) input:not([type="submit"]) {
+  form input:not([type="submit"]) {
       display: inline-block;
       width: 100%;
       height: 45px;
@@ -219,7 +219,7 @@
       transition: all 0.3s ease-in;
   }
 
-  form:not(.rs-form) textarea {
+  form textarea {
       width: 100%;
       height: 120px;
       resize: none;
@@ -234,7 +234,7 @@
       transition: all 0.3s ease-in;
   }
 
-  form:not(.rs-form) input:not([type="submit"]):focus, form:not(.rs-form) textarea:focus {
+  form input:not([type="submit"]):focus, form textarea:focus {
       border-color: #ccc;
   }
 
