--- a/src/components/style.css
+++ b/src/components/style.css
@@ -12,3 +12,23 @@
     font-size: 2rem;
     font-family: 'Montserrat';
 }
+
+
+
+
+
+
+
+/** Responsive CSS starts here **/
+
+@media (max-width: 767.98px) {
+    .innerPg_header h2 {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .innerPg_header h2 {
+        font-size: 1rem;
+    }
+}
