--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -1,11 +1,24 @@
 .contact_sec .contact_inner {
     padding: 4rem 1rem;
-    background-color: #F4F4F4;
+    position: relative;
+}
+
+.contact_sec .contact_inner #tsparticles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .contact_sec .contForm {
     width: 60%;
     margin: 0 auto;
+    position: relative;
+    z-index: 1;
+    padding: 2rem;
+    background-color: #f4f4f4;
+    border-radius: 8px;
 }
 
 
@@ -26,12 +39,15 @@
 
 @media (max-width: 575.98px) {
     .contact_sec .contact_inner {
-        padding: 2rem 1rem;
+        padding: 2rem 0;
     }
 }
 
 @media (max-width: 475.98px) {
     .contact_sec .contForm {
         width: 95%;
+        padding: 1rem;
+        border-radius: 2px;
+        background-color: #f4f4f449;
     }
 }
