--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,5 @@
 .innerPg_header {
-    padding: 15% 0 8% 0;
+    padding: 100px 0 30px 0;
     background-repeat: no-repeat;
     background-size: cover;
     background: url(../assets/images/sec_bg-img.jpg), rgba(0,0,0,0.85);
@@ -10,6 +10,7 @@
     margin: 0;
     color: #fff;
     font-size: 2rem;
+    text-align: center;
     font-family: 'Montserrat';
 }
 
@@ -28,6 +29,11 @@
 }
 
 @media (max-width: 575.98px) {
+
+    .innerPg_header {
+        padding: 85px 0 30px 0;
+    }
+
     .innerPg_header h2 {
         font-size: 1rem;
     }
