--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ p {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.4);
 }
 
 .mainHeader .header_wrap {
@@ -196,7 +196,7 @@ p {
 
 .footer-sec {
   padding: 3rem 0;
-  background: linear-gradient(-90deg, #8a0123 0%, #cf2e2e 100%);
+  background: #eee;
 }
 
 .footerCol-6, .footerCol-3 {
@@ -215,7 +215,7 @@ p {
 }
 
 .footerCol_inner h4 {
-  color: #fff;
+  color: #000;
   font-family: 'Montserrat';
   font-size: 18px;
   font-weight: 500;
@@ -227,7 +227,7 @@ p {
 .footerCol_inner p {
   font-size: 15px;
   line-height: 25px;
-  color: #fff;
+  color: #000;
   font-weight: 400;
 }
 
@@ -238,33 +238,41 @@ ul.foot_menu {
 ul.foot_menu li a {
   text-align: left;
   text-transform: capitalize;
-  color: #fff;
+  color: #333;
   margin: 0 0 15px;
   padding: 0;
   display: inline-block;
+  font-size: 14px;
 }
 
 ul.foot_menu li a:hover {
-  color: #000;
+  color: #22e4ac;
 }
 
 .footerCol_inner ul.address li {
   margin: 0 0 15px;
-  color: #fff;
-  font-weight: 500;
+  color: #000;
+  font-weight: 400;
 }
 
 .footerCol_inner ul.address li a {
-  color: #fff;
+  color: #000;
+}
+
+.footerCol_inner ul.address li a:hover {
+  color: #14c9cb;
 }
 
 .footerCol_inner ul.address li i {
   margin-right: 10px;
+  color: #22e4ac;
 }
 
 .footerCol_inner ul.address li span img {
   margin-right: 10px;
   vertical-align: middle;
+  filter: invert(1);
+  -webkit-filter: invert(1);
 }
 
 .footerCol_inner ul.social_info {
@@ -276,16 +284,15 @@ ul.social_info {
   display: -ms-flexbox;
   align-items: center;
   gap: 20px;
-  color: #fff;
 }
 
 ul.social_info li a {
   position: relative;
   width: 30px;
   height: 30px;
-  border: 1px solid #fff;
+  border: 1px solid #22e4ac;
   border-radius: 50%;
-  color: #fff;
+  color: #22e4ac;
   display: flex;
   display: -ms-flexbox;
   justify-content: center;
@@ -296,7 +303,7 @@ ul.social_info li a {
 ul.social_info li a span {
   position: absolute;
   top: 30%;
-  background-color: #fff;
+  background-color: #22e4ac;
   border-radius: 4px;
   font-size: 10px;
   font-weight: 500;
@@ -304,7 +311,7 @@ ul.social_info li a span {
   width: 70px;
   height: 20px;
   line-height: 20px;
-  color: #cf2e2e;
+  color: #fff;
   opacity: 0;
   visibility: hidden;
   transition: top 0.3s ease;
@@ -313,7 +320,7 @@ ul.social_info li a span {
 ul.social_info li a span:after {
   content: '';
   position: absolute;
-  border: 5px solid #fff;
+  border: 5px solid #22e4ac;
   border-left-color: transparent;
   border-right-color: transparent;
   border-bottom-color: transparent;
@@ -327,7 +334,7 @@ ul.social_info li a img {
 }
 
 ul.social_info li a:hover {
-  box-shadow: 0px 0px 5px 5px rgba(255,255,255,0.7);
+  box-shadow: 0px 0px 5px 5px #22e4ad62;
   border-color: transparent;
 }
 
@@ -339,7 +346,7 @@ ul.social_info li a:hover span {
 
 footer .copyright {
   text-align: center;
-  background: linear-gradient(0deg, #8a0123 0%, #cf2e2e 100%);
+  background: linear-gradient(-90deg, #2af598 0%, #14c9cb 100%);
   color: #fff;
   padding: 12px 0;
   font-size: 12px;
@@ -433,7 +440,6 @@ footer .copyright img {
   }
 
   ul.foot_menu li a {
-    font-size: 14px;
     margin: 0 0 10px;
   }
 
@@ -576,7 +582,7 @@ footer .copyright img {
 
   .footerCol_inner ul.address li {
       margin: 0 0 10px;
-      font-size: 14px;
+      font-size: 13px;
   }
 
   .footerCol_inner h4 {
@@ -694,7 +700,7 @@ footer .copyright img {
   }
 
   .footerCol_inner p {
-      font-size: 13px;
+    font-size: 12px;
   }
 }
 
