--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -15,7 +15,7 @@
 }
 
 .about_sec .about_cont::first-letter {
-    color: #cf2e2e;
+    color: #2af598;
     font-weight: 500;
     font-size: 40px;
     line-height: 1.2;
