--- a/src/assets/css/widgets.css
+++ b/src/assets/css/widgets.css
@@ -57,12 +57,12 @@
 }
 
 .butn_main {
-    color: #8a0123 !important;
-    border-color: #8a0123 !important;
+    color: #2af598 !important;
+    border-color: #2af598 !important;
 }
 
 .butn_main:before, .butn:after {
-    background-image: linear-gradient(-90deg, #8a0123 0%, #cf2e2e 100%) !important;
+    background-image: linear-gradient(-90deg, #14c9cb 0%, #2af598 100%) !important;
 }
 
 .butn_main:hover {
@@ -142,7 +142,7 @@
     width: 12px;
     height: 8px;
     left: -10px;
-    border: 1px solid #ed3b58;
+    border: 1px solid #1bd7bb;
     opacity: 0;
     position: absolute;
     text-transform: none;
@@ -159,7 +159,7 @@
 }
 
 .linkEffect a:hover {
-    color: #ed3b58 !important;
+    color: #2af598 !important;
     opacity: 0.8;
 }
 
